optimize file structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 .idea/
-app/*.js
-app/header/*.js
-app/header/list/*.js
-app/tables/*.js
-app/tables/content/*.js
-app/tables/content/header/*.js
-app/tables/content/detail/*.js
-app/tables/sidebar/*.js
+module/*.js
+entities/*.js
+view/*.js
+view/header/*.js
+view/header/list/*.js
+view/tables/*.js
+view/tables/content/*.js
+view/tables/content/header/*.js
+view/tables/content/detail/*.js
+view/tables/sidebar/*.js
 collection/*.js
 model/*.js
 templates/*.js
